tests/miniJava/neg/005834_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { length while ( 0 ) { } } }
